--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,10 @@
   	<filter-name>CurrentUserFilter</filter-name>
   	<url-pattern>/index.jsp</url-pattern>
   </filter-mapping>
+  <filter-mapping>
+  	<filter-name>CurrentUserFilter</filter-name>
+  	<url-pattern>/missed_tasks.jsp</url-pattern>
+  </filter-mapping>
   <servlet>
   	<servlet-name>RegisterServlet</servlet-name>
   	<display-name>RegisterServlet</display-name>
@@ -38,6 +42,12 @@
   	<description></description>
   	<servlet-class>servlets.AddTodoServlet</servlet-class>
   </servlet>
+  <servlet>
+  	<servlet-name>RetriveTask</servlet-name>
+  	<display-name>RetriveTask</display-name>
+  	<description></description>
+  	<servlet-class>servlets.RetriveTask</servlet-class>
+  </servlet>
 
   <servlet-mapping>
   	<servlet-name>RegisterServlet</servlet-name>
@@ -54,6 +64,10 @@
   <servlet-mapping>
   	<servlet-name>AddTodoServlet</servlet-name>
   	<url-pattern>/AddTodoServlet</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>RetriveTask</servlet-name>
+  	<url-pattern>/RetriveTask</url-pattern>
   </servlet-mapping>
 
 
